--- a/config.json
+++ b/config.json
@@ -1,11 +1,5 @@
 {
-  "latestVersion": "1.9",
-  "latestVersionCode": 19,
-  "disableRequest": {
-    "below": 10,
-    "on": "40 20 353"
-  },
-  "url": "https://github.com/zixpo/candybar",
+  "url": "https://github.com/herinanth/rainbow",
   "releaseNotes": [
     "This is the text which will be shown on Update",
     "Another Release Note"
