--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "latestVersion": "2.7",
-  "latestVersionCode": 27,
+  "latestVersion": "2.8",
+  "latestVersionCode": 28,
   "disableRequest": {
     "below": 21,
     "on": "19 20"
   },
-  "url": "https://play.google.com/store/apps/details?id=com.pashapuma.pixp.iconpack",
+  "url": "https://github.com/herinanth/rainbow",
   "releaseNotes": [
     "New of many icons options",
     "Added 100+ adaptive icon",
