--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "below": 21,
     "on": "19 20"
   },
-  "url": "https://github.com/herinanth/rainbow",
+  "url": "https://github.com/herinanth/rainbow/releases",
   "releaseNotes": [
     "New of many icons options",
     "Added 100+ adaptive icon",
