--- a/config.json
+++ b/config.json
@@ -7,9 +7,8 @@
   },
   "url": "https://github.com/herinanth/rainbow/releases",
   "releaseNotes": [
-    "New of many icons options",
-    "Added 100+ adaptive icon",
-    "Added Analog Clock Widget",
-    "Added new 14 wallpapers"
+    "Aggiungete icone per dispositivi Samsung",
+    "Aggiunge le icone di alcuni nuovi servizi",
+    "Aggiunto uno sfondo"
   ]
 }
